// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail should render with a specific image 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        aria-hidden={true}
        style={
          Object {
            "paddingBottom": "NaN%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source />
        <img
          alt=""
          loading="lazy"
          onLoad={[Function]}
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </a>
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Arget"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Arget
    </span>
  </a>
   
</div>
`;

exports[`Thumbnail should render with no photo 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        aria-hidden={true}
        style={
          Object {
            "paddingBottom": "NaN%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source />
        <img
          alt=""
          loading="lazy"
          onLoad={[Function]}
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </a>
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Dlanor S"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Dlanor S
    </span>
  </a>
   
</div>
`;

exports[`Thumbnail should render without attribution 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        aria-hidden={true}
        style={
          Object {
            "paddingBottom": "NaN%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source />
        <img
          alt=""
          loading="lazy"
          onLoad={[Function]}
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </a>
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Arget"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Arget
    </span>
  </a>
   
</div>
`;
